Use io.Reader insead of []byte for file download and upload
